<resources>
    <string name="app_name">11Dreamer</string>
    <string name="let_s_play">GET STARTED</string>
    <string name="have_a_referral_code">Have a referral code?</string>
    <string name="enter_a_code">Enter a code</string>
    <string name="already_a_user">Already a user?</string>
    <string name="log_in">Log in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">172127250769126</string>
    <string name="fb_login_protocol_scheme">fb172127250769126</string>
    <string name="by_joining_this">By Joining this contest, you accept 11Dreamer\'s T&amp;C and confirm that you are not a resident of Assam, Odisha, Telangana, Nagaland or Sikkim.</string>
    <string name="MinimumWithdrawAmountLimit">500</string>
    <string name="sign_in">SignIn</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="sign_up">Sign up</string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="hundered">100</string>
    <string name="two_hundred">200</string>
    <string name="five_hundred">500</string>
    <string name="add_cash_head">ADD CASH</string>
    <string name="enter_valid_amt">Enter Valid Amount</string>
    <string name="enter_min_amt">Enter minimum  Amount is 10</string>
    <string name="wk">Wicket Keeper</string>
    <string name="batsman">Batsman</string>
    <string name="all_rounder">All Rounder</string>
    <string name="bowler">Bowler</string>
    <string name="c_vc"><![CDATA[CHOOSE C & VC]]></string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="India">India</string>
    <string name="ur_global_rank">YOUR GLOBAL RANKING</string>
    <string name="ur_invited_frnds">YOUR INVITED FRIENDS</string>
    <string name="invite_frnds">INVITE FRIENDS</string>
    <string name="join_contest">JOIN CONTEST</string>
    <string name="my_teams">MY TEAMS</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="pymnt_opt">PAYMENT OPTION</string>
    <string name="pymnt_options">PAYMENT OPTION</string>
    <string name="invite_frnds_to_contact">INVITE FRIENDS TO CONTEST</string>
    <string name="select_winning_breakup">Select Winning Breakup</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="new_pass">NEW PASSWORD</string>
    <string name="as_on_pan">As on pan card</string>
    <string name="verify_pan">VERIFY YOUR PAN</string>
    <string name="pan_no">PAN Number</string>
    <string name="ten_digit_pan_no">10 Digit pan no.</string>
    <string name="as_on_adhar_card">As on aadhaar card</string>
    <string name="verify_adhar">VERIFY YOUR AADHAAR</string>
    <string name="adhar_no">Aadhaar Number</string>
    <string name="ten_digit_adhar_no">10 Digit aadhaar no.</string>
    <string name="pls_select_img">Please select image</string>
    <string name="pls_enter_name">Please Enter Name</string>
    <string name="pls_enter_doc_num">Please Enter Document Number</string>
    <string name="pls_enter_dob">Please Enter Date Of Birth</string>
    <string name="pls_enter_state_name">Please Enter State Name</string>
    <string name="withdraw_amt">WITHDRAW AMOUNT</string>
    <string name="contest">CONTESTS</string>
    <string name="match_not_started">Please Wait! Match has not started yet.</string>
    <string name="fixture">FIXTURES</string>
    <string name="live">LIVE</string>
    <string name="result">RESULTS</string>
    <string name="invite_code">Invite Code</string>
    <string name="my_team">My Team</string>
    <string name="my_recent_transactions">My Recent Transactions</string>
    <string name="update_your_kyc_document_for_withdraw_amount">Update your KYC document for withdraw amount.</string>
    <string name="know_your_customer">Know Your Customer</string>
    <string name="upload">Upload</string>
    <string name="pan_card">PAN CARD</string>
    <string name="aadhaar_card">AADHAAR CARD</string>
    <string name="add_remove_cards_wallets_etc">Add/remove cards,wallets, etc.</string>
    <string name="manage_payments">Manage Payments</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="bonus">BONUS</string>
    <string name="winnings">WINNINGS</string>
    <string name="deposited">DEPOSITED</string>
    <string name="add_balance">ADD BALANCE</string>
    <string name="deposited_winnings">DEPOSITED + WINNINGS</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="total_winnings">TOTAL WINNINGS</string>
    <string name="entry_fee">ENTRY FEE</string>
    <string name="free">Free</string>
    <string name="joined_with">JOINED WITH</string>
    <string name="team_1">Team 1</string>
    <string name="invite_friends_in_this_contest">Invite Friends in this Contest</string>
    <string name="invite">Invite</string>
    <string name="no_live_contest_joined">No Live Contest Joined</string>
    <string name="edit">Edit</string>
    <string name="preview">Preview</string>
    <string name="player_role">Player Role</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="c_gets_2x_points_amp_vc_gets_1_5x_points"><![CDATA[(C) Gets 2X Points & (VC) Gets 1.5X Points]]></string>
    <string name="choose_captain">Choose Captain</string>
    <string name="c">(C)</string>
    <string name="vc">(VC)</string>
    <string name="amp_vice_captain"><![CDATA[& Vice Captain]]></string>
    <string name="by_registering_i_agree_to_my11team_s">By registering, I agree to 11Dreamer\'s</string>
    <string name="not_avil_demo">This payment mode is not available on Demo Version</string>
    <string name="dream_coins_balance">DreamCoins Balance</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="permission_and_settings">Permissions and Settings</string>
    <string name="app_language">App Language</string>
    <string name="manage_account">Manage Account</string>
    <string name="logout">Logout</string>
    <string name="permissions">Permissions</string>
    <string name="make_me_discoverable">Make Me Discoverable</string>
    <string name="allow_whatsapp_messages">Allow Whatsapp messages</string>
    <string name="friends_can_find_and_follow_you_when_they_sync_their_phone_contacts">Friends can find and follow you when they sync their phone contacts</string>
    <string name="access_dream11_updates_offers_and_support">Access Dream11 updates, offers, and support</string>
    <string name="personal_information">Personal Information</string>
    <string name="display_my_full_name_on_profile">Display my full name on profile</string>
    <string name="your_full_name_will_be_visible_to_everyone_who_views_your_profile">Your full name will be visible to everyone who views your profile</string>
    <string name="gamePlay">GamePlay</string>
    <string name="show_my_previous_teams">Show my previous teams</string>
    <string name="people_who_view_you_profile_will_be_able_to_see_teams_that_you_have_created">People who view your profile will be able to see teams that you have created</string>
    <string name="allow_msg_request">Allow Message Requests</string>
    <string name="people_will_be_able_to_send_you_message_request">People will be able to send you message requests</string>
    <string name="people_you_dont_have_a_dm_with_will_be_able_to_challenge_you_to_contests">People you don\'t have a DM with will be able to challenge you to contests</string>
    <string name="allow_challenege">Allow Challenges</string>
    <string name="safety">Safety</string>
    <string name="people_i_have_blocked">People I have blocked</string>
    <string name="checkout_the_people_who_you_have_blocked">Checkout the people who you have blocked</string>
    <string name="winner_count"><b>116</b> Crorepatis . <b>4,806 </b>Lakhpatis</string>
    <string name="community_guidlines">Community Guidelines</string>
    <string name="jobs">Jobs</string>
    <string name="legality">Legality</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions_one">Terms And Conditions</string>
    <string name="follower"> <b>0</b> Followers</string>
    <string name="you_have_been_playing_on_dream11_since"> You have been playing on Dream11 since <b>Mar 2020</b> </string>
</resources>
