<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MoreActivity">
        <include
            android:id="@+id/head"
            layout="@layout/activity_mainheader"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey100"
        android:layout_below="@id/head">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/RL_InviteFriends"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/community_guidlines"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/dimen_16sp"
                android:drawableStart="@drawable/invite_friends"
                android:drawableEnd="@drawable/arrow_icon_pay"
                android:drawablePadding="@dimen/dimen_10dp"
                android:layout_margin="@dimen/dimen_15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey100"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jobs"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/dimen_16sp"
                android:drawableStart="@drawable/how_to_play"
                android:drawableEnd="@drawable/arrow_icon_pay"
                android:drawablePadding="@dimen/dimen_10dp"
                android:layout_margin="@dimen/dimen_15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey100"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/dimen_16sp"
                android:drawableStart="@drawable/about_us"
                android:drawableEnd="@drawable/arrow_icon_pay"
                android:drawablePadding="@dimen/dimen_10dp"
                android:layout_margin="@dimen/dimen_15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey100"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legality"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/dimen_16sp"
                android:drawableStart="@drawable/how_to_play"
                android:drawableEnd="@drawable/arrow_icon_pay"
                android:drawablePadding="@dimen/dimen_10dp"
                android:layout_margin="@dimen/dimen_15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey100"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions_one"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/dimen_16sp"
                android:drawableStart="@drawable/how_to_play"
                android:drawableEnd="@drawable/arrow_icon_pay"
                android:drawablePadding="@dimen/dimen_10dp"
                android:layout_margin="@dimen/dimen_15dp"/>
        </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    </RelativeLayout>
</layout>